--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "C_Cpp.errorSquiggles": "Disabled",
     "files.associations": {
-        "vector": "cpp"
+        "*.tsx": "typescriptreact",
+        "vector": "cpp",
+        "regular-expression-matching.C": "cpp"
     }
 }
